Correct mild warning color, right align amount in example

--- a/src/less/_variables-swedbankpay.less
+++ b/src/less/_variables-swedbankpay.less
@@ -8,7 +8,7 @@
 @black:                                     #222222;
 @text-gray:                                 #767676;
 @list-gray:                                 #999999;
-@light-gray:                                #F9F8F6;
+@light-gray:                                #f9f8f6;
 @white:                                     #ffffff;
 
 /* Brownscale */
@@ -49,7 +49,7 @@
 @brand-success:                             #51971b;
 @brand-success-light:                       #f2f7eb;
 @brand-success-light-2:                     #99cc66;
-@brand-warning:                             #ff9900;
+@brand-warning:                             #f9ce22;
 @brand-warning-light:                       #fff3d5;
 @brand-warning-2:                           @brand-tertiary;
 @brand-error-border:                        #f1bbb9;
